# cuda_gemm_optimization

./: .gitignore  CMakeLists.txt  README.md  a.cpp  cutlass_diary.md  diary.md  info.md
include/: kernels.cuh  utils.h
include/v1/: kernels.cuh
include/v2/: 01_global_mem.cuh  02_shared_mem.cuh  coord.cuh  gemm.cuh  iterator.cuh  launch.cuh  params.cuh
src/: 00_naive.cu  00_trivial.cu  01_coalesced.cu  02_smem.cu  baseline_cublas.cu  main.cu
src/utils/: gen2D.py  utils.cpp  verify.py
src/v1/: 00_naive.cu  01_coalesced.cu  main.cu
src/v2/: 01_global_mem.cu  main.cu
